# tmesh

./: .clang-format  .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  TODO.md  intersection.stl  pyproject.toml  setup.py
.github/workflows/: build-examples.yml  python-checks.yml  python-publish.yml
docs/: .gitignore  Makefile
docs/source/: api_reference.rst  conf.py  cpu.rst  index.rst  installation.rst
examples/: Makefile  README.md  base.py  boolean_ops_2d.py  convex_hull.py  convex_hull.stl  cylinder.py  cylinder.stl  get_readme_block.py  intersection.py  intersection.stl  intersection_3d.py  simple.py  simple.stl  simple_example.stl  sphere.py  sphere.stl  torus.py  torus.stl
fast_trimesh/: CMakeLists.txt  main.h
fast_trimesh/cpu/: bvh.h  (+21 more)
scripts/: mk_docs.py  plot_2d.py  plot_3d.py  save_test_object.py  save_test_stl.py
src/: CMakeLists.txt  main.cpp  main.h
src/cpu/: aabb_tree.cpp  aabb_tree.h  boolean.cpp  boolean.h  bvh.cpp  bvh.h  io.cpp  io.h  main.cpp  main.h  ops.cpp  ops.h  options.cpp  options.h  shapes.cpp  shapes.h  trimesh.cpp  trimesh.h  types.cpp  types.h
src/cpu/three/: boolean.cpp  boolean.h  bvh.cpp  bvh.h  io.cpp  io.h  main.cpp  main.h  types.cpp  types.h
src/cpu/two/: boolean.cpp  boolean.h  bvh.cpp  bvh.h  io.cpp  io.h  main.cpp  main.h  types.cpp  types.h
src/cuda/: main.cpp  main.h
tests/: test_cpu_boolean.py  test_cpu_bvh.py  test_cpu_geometry.py  test_cpu_triangulate.py  test_cpu_trimesh.py  test_cpu_types.py  test_linear_extrude.py  test_trimesh.py  test_types.py
tmesh/: __init__.py
utils/: plot_3d.py
(+27 files in other folders)
